--- a/src/views/canvas.css
+++ b/src/views/canvas.css
@@ -163,3 +163,9 @@
     font-size: 18px;
     line-height: 1;
 }
+
+.selection-menu-validate-input-div {
+    display: 'grid';
+    grid-template-columns: '1fr 1fr 1fr';
+    gap: 5 
+}
